--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 							<article id="intro">
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>My name is Khairul Fahmi bin Mazlan.</p>
+								<p>My name is Khairul Fahmi bin Mazlan. As a fresh graduate i am eager to learn more applicable IT knowledge that companies actually use.</p>
 							</article>
 
 						<!-- Work -->
